Fix alignment

--- a/_css/_post.scss
+++ b/_css/_post.scss
@@ -73,7 +73,9 @@
         top: 0;
         right: 0;
 
-        max-width: 60%;
+
+        max-width: 50%;
+        text-align: end;
     }
 
     .Post-Title {
